--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Wellcome to</h1>
+    <h1>Mohammod world</h1>
 </body>
 </html>
