--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>Wellcome to</h1>
-    <h1>Mohammod world</h1>
+    <h1> <span class="colorfull-text">Mohammod</span> world</h1>
 </body>
 </html>
