top banner added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Wellcome to</h1>
-    <h1> <span class="colorfull-text">Mohammod</span> world</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Wellcome to</h1>
+            <h1> <span class="colorfull-text">Mohammod</span> world</h1>
+            <h3>A New Programmer and Wordprees Developer</h3>
+            <p>I am Muhammad. I am a student. I study in a madrasa. I have been interested in programming for a long time. I was looking for where I could learn good programming, then I found a programming hero, and I got admitted here. Now I am learning web development and I am continuing to work hard to do better in the future, and I think programming heroes will support me in this matter and they will solve any of my problems. Finally thank you to our revered Jhangkar Sir</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammod-bin-amin-b051a0244/">Hire Me</a>
+            </div>
+        <div class="half-width">
+            <img src="./images/mahbubsir.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
