--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
             <a class="link-button" target="_blank" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
-
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div>
+            <h1>Full Stack Web Developer</h1>
+            <h3>2022-present </h3>
+        </div>
+        <div>
+            <h1>Baby Web Developer</h1>
+        </div>
+    </section>
 </body>
 </html>
