--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Wellcome to</h1>
             <h1> <span class="colorfull-text">Mohammod</span> world</h1>
@@ -23,7 +23,7 @@
             <img src="./images/mahbubsir.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/mahbub-sir.png" alt="">
         </div>
@@ -34,14 +34,19 @@
             <a class="link-button" target="_blank" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
-    <section class="experience-area">
+    <section class="experience-area ">
         <h1>Experiences</h1>
-        <div>
-            <h1>Full Stack Web Developer</h1>
-            <h3>2022-present </h3>
-        </div>
-        <div>
-            <h1>Baby Web Developer</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Web Developer</h1>
+                <h3>2024-present | Pro Level Developer </h3>
+                <p>I am a regular student of Programming Hero. I had high hopes that I would be a programmer and it was possible because of my hard work and the tireless work of the whole team of programming heroes. I am grateful to the whole programming hero. Now I am a junior full stack developer.</p>
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer</h1>
+                <h3>2022- 2024 Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
