--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
     <section class="experience-area ">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stack Web Developer</h1>
-                <h3>2024-present | Pro Level Developer </h3>
+            <div id="colunm-one" class="experience-col">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="colorfull-text">2024-present | Pro Level Developer </h3>
                 <p>I am a regular student of Programming Hero. I had high hopes that I would be a programmer and it was possible because of my hard work and the tireless work of the whole team of programming heroes. I am grateful to the whole programming hero. Now I am a junior full stack developer.</p>
             </div>
-            <div class="half-width">
-                <h1>Baby Web Developer</h1>
-                <h3>2022- 2024 Programming Hero Learner</h3>
+            <div id="colunm-two" class="experience-col">
+                <h2>Baby Web Developer</h2>
+                <h3 class="colorfull-text">2022- 2024 Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
         </div>
     </section>
 </body>
+<footer>
+    <p>© Mohammod 2022, a Programming Hero Learning.</p>
+</footer>
 </html>
